todo-app/manifests/backend/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: todo-app-backend-postgres-statefulset
spec:
  serviceName: todo-app-backend-postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-backend-postgres-app
  template:
    metadata:
      labels:
        app: todo-app-backend-postgres-app
    spec:
      containers:
        - name: postgres
          image: postgres:18.3-alpine3.23
          volumeMounts:
            - name: todo-app-backend-postgres-volume
              mountPath: /var/lib/postgresql
          ports:
            - name: db
              containerPort: 5432
  volumeClaimTemplates:
    - metadata:
        namespace: project
        name: todo-app-backend-postgres-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
