todo-app/manifests/backend/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-app-backend-postgres-service
  labels:
    app: todo-app-backend-postgres
spec:
  clusterIP: None
  ports:
    - port: 5432
      name: db
  selector:
    app: todo-app-backend-postgres-app
