todo-app/manifests/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-backend-service
spec:
  type: ClusterIP
  selector:
    app: todo-app-backend-deployment
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
